--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "@types/node": "^16.18.115",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^2.0.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
+    "react-loading-skeleton": "^3.4.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +52,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.9",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "babel-loader": "^9.2.1",
+    "react-refresh": "^0.14.2"
   }
 }
