--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,28 @@
 name: Deploy to VPS
 
-	on:
-	  push:
-	    branches:
-	      - master  # Change this to your main branch
+on:
+  push:
+    branches:
+      - master  # Change this to your main branch
 
-	jobs:
-	  deploy:
-	    runs-on: ubuntu-latest
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-	    steps:
-	      - name: Checkout code
-	        uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-	      - name: Set up SSH
-	        uses: webfactory/ssh-agent@v0.5.3
-         
-	        with:
-	          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
-	      - name: Deploy to VPS
-	        run: |
-	          ssh -o StrictHostKeyChecking=no deployer@${{ secrets.VPS_HOST }} << 'EOF'
-	            cd /var/www/my-apps/parika-app-client
-	            git pull origin master  # Adjust branch name if needed
-	            # Add commands to restart your application here
-	          EOF
+      - name: Deploy to VPS
+        run: |
+          ssh -o StrictHostKeyChecking=no deployer@${{ secrets.VPS_HOST }} << 'EOF'
+            # Navigate to your application directory
+            cd /var/www/my-apps/parika-app-client
+            
+           
+          EOF
